--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,27 @@
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
+
+::-webkit-scrollbar {
+    height: 12px;
+    width: 16px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(0, 0, 0, .2);
+    border: 4px solid #fff;
+    border-radius: 50px;
+}
+
+.dark .overflow-y-auto::-webkit-scrollbar-thumb {
+    background: hsla(0, 0%, 100%, .2);
+    border: 4px solid #121927
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #12d3cf
+}
